force-app/main/default/objects/VCG_CPQ_Product_Addon__c/VCG_CPQ_Product_Addon__c.object-meta.xml
<CustomObject>
    <label>Product Addon</label>
    <nameField>
        <label>Product Addon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Addons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>