force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Addon_Group__c.field-meta.xml
<CustomField>
    <fullName>Addon_Group__c</fullName>
    <label>Addon Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>