force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Availability_Condition__c.field-meta.xml
<CustomField>
    <fullName>Availability_Condition__c</fullName>
    <label>Availability Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>