force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>IF(ISNULL(TEXT(Product__r.Business_Unit__c)), TEXT(Product_Addon__r.Business_Unit__c), TEXT(Product__r.Business_Unit__c))</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>