force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Addons - Add-Ons</relationshipLabel>
    <relationshipName>Product_Addons</relationshipName>
    <type>Lookup</type>
</CustomField>