force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Product_Addon__c.field-meta.xml
<CustomField>
    <fullName>Product_Addon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Addon</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Addons - Add-On For</relationshipLabel>
    <relationshipName>Product_Addons1</relationshipName>
    <type>Lookup</type>
</CustomField>