force-app/main/default/objects/VCG_CPQ_Product_Addon__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <description>CPQ Formula Field</description>
    <inlineHelpText>CPQ Formula Field</inlineHelpText>
    <label>Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>