force-app/main/default/objects/VCG_CPQ_Product_Addon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Addon__c</columns>
    <columns>Required__c</columns>
    <columns>Needs_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>