force-app/main/default/objects/VCG_CPQ_Product_Addon__c/listViews/Omnitracs_XRS.listView-meta.xml
<ListView>
    <fullName>Omnitracs_XRS</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Addon__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Omnitracs US,XRS Corporation</value>
    </filters>
    <label>Omnitracs/XRS</label>
    <language>en_US</language>
</ListView>